{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "4194e79f-591d-4494-b9cc-d2ca5da15252",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c697e5ed-0973-400a-940c-574794b94be8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "12a90df9-ce16-404d-a116-5b8fce1c0ae0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLook",
                    "type": "PassThrough",
                    "id": "a4f71443-5a30-4728-872d-9af94ffef057",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltitudeUp",
                    "type": "Button",
                    "id": "6f742642-5efc-4353-8d92-d9379d4f8f7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltitudeDown",
                    "type": "Button",
                    "id": "2ace9e9f-d5bf-43f7-8d48-af287fb3033e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f41f838-e708-4645-8f3a-f3952028defb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e69a9129-36bb-40f1-a4ab-b27f20f18e2e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4767c29c-04d0-41a1-b89f-43b82853ac6e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11fe04be-36f5-4406-8bfe-8bd24894cc90",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltitudeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4a83611-a187-4c14-a134-c3cd040ba749",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltitudeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}